added new attendance doc and improvements